tests/ui/proc-macro/multispan.stderr
error: hello to you, too!
  --> $DIR/multispan.rs:12:5
   |
LL |     hello!(hi);
   |     ^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:12:12
   |
LL |     hello!(hi);
   |            ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:15:5
   |
LL |     hello!(hi hi);
   |     ^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:15:12
   |
LL |     hello!(hi hi);
   |            ^^ ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:18:5
   |
LL |     hello!(hi hi hi);
   |     ^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:18:12
   |
LL |     hello!(hi hi hi);
   |            ^^ ^^ ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:21:5
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:21:12
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi);
   |            ^^     ^^    ^^           ^^ ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:22:5
   |
LL |     hello!(hi there, hi how are you? hi... hi.);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:22:12
   |
LL |     hello!(hi there, hi how are you? hi... hi.);
   |            ^^        ^^              ^^    ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:23:5
   |
LL |     hello!(whoah. hi di hi di ho);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:23:19
   |
LL |     hello!(whoah. hi di hi di ho);
   |                   ^^    ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: hello to you, too!
  --> $DIR/multispan.rs:24:5
   |
LL |     hello!(hi good hi and good bye);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:24:12
   |
LL |     hello!(hi good hi and good bye);
   |            ^^      ^^
   = note: this error originates in the macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

